[package]
name = "rusty_pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = {version = "*",  features = ["native-tls"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
url = "2.0.0"
futures-channel = "0.3.25"
[dev-dependencies]
